--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -14,6 +14,8 @@ riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
 spin = "0.9"
 lock_api = "=0.4.6"
 xmas-elf = "0.7.0"
+virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
+easy-fs = { path = "../easy-fs" }
 
 [profile.release]
 debug = true
