--- a/os/Makefile
+++ b/os/Makefile
@@ -17,6 +17,11 @@ ifeq ($(MODE), release)
 	MODE_ARG := --release
 endif
 
+#GUI ?= off
+#ifeq ($(GUI), off)
+#	GUI_OPTION := -display none
+#endif
+
 # KERNEL ENTRY
 KERNEL_ENTRY_PA := 0x80200000
 
@@ -67,12 +72,26 @@ disasm-vim: kernel
 
 run: run-inner
 
-QEMU_ARGS := -machine virt \
-			 -nographic \
-			 -bios $(BOOTLOADER) \
-			 -device loader,file=$(KERNEL_BIN),addr=$(KERNEL_ENTRY_PA) \
-			 -drive file=$(FS_IMG),if=none,format=raw,id=x0 \
-			 -device virtio-blk-device,drive=x0,bus=virtio-mmio-bus.0
+QEMU_ARGS := -M 128m \
+			-machine virt \
+			-bios $(BOOTLOADER) \
+			$(GUI_OPTION) \
+			-device loader,file=$(KERNEL_BIN),addr=$(KERNEL_ENTRY_PA) \
+			-drive file=$(FS_IMG),if=none,format=raw,id=x0 \
+			-device virtio-blk-device,drive=x0 \
+			-device virtio-gpu-device  \
+			-device virtio-keyboard-device  \
+			-device virtio-mouse-device \
+			-device virtio-net-device,netdev=net0 \
+            -netdev user,id=net0,hostfwd=udp::6200-:2000,hostfwd=tcp::6201-:80 \
+			-serial stdio
+
+#QEMU_ARGS := -machine virt \
+#			 -nographic \
+#			 -bios $(BOOTLOADER) \
+#			 -device loader,file=$(KERNEL_BIN),addr=$(KERNEL_ENTRY_PA) \
+#			 -drive file=$(FS_IMG),if=none,format=raw,id=x0 \
+#			 -device virtio-blk-device,drive=x0,bus=virtio-mmio-bus.0
 
 run-inner: build
 	@qemu-system-riscv64 $(QEMU_ARGS)
@@ -83,6 +102,9 @@ debug: build
 		tmux split-window -h "riscv64-unknown-elf-gdb -ex 'file $(KERNEL_ELF)' -ex 'set arch riscv:rv64' -ex 'target remote localhost:1234'" && \
 		tmux -2 attach-session -d
 
+fdt:
+	@qemu-system-riscv64 -M 128m -machine virt,dumpdtb=virt.out
+	fdtdump virt.out
 
 gdbserver: build
 	@qemu-system-riscv64 $(QEMU_ARGS) -s -S
@@ -90,4 +112,4 @@ gdbserver: build
 gdbclient:
 	@riscv64-unknown-elf-gdb -ex 'file $(KERNEL_ELF)' -ex 'set arch riscv:rv64' -ex 'target remote localhost:1234'
 
-.PHONY: build env kernel clean disasm disasm-vim run-inner fs-img gdbserver gdbclient
+.PHONY: build env kernel clean disasm disasm-vim run-inner fs-img gdbserver gdbclient fdt
